--- a/docs/team/a1021492980.md
+++ b/docs/team/a1021492980.md
@@ -1,99 +1,109 @@
 # Haofeng - Project Portfolio Page
 
-## Project: WerkIt
+## Project: WerkIt!
 ## Overview
-WerkIt! is a desktop application for managing workout routines, optimized for use via a Command Line Interface (CLI). 
-This application is for the people who wish to have an application to keep track of their workouts and have a system
-to store their workout routines.
 
-The users will be able to create, view, update and delete the workouts and plans they have created and store them in
-the application. The users will also be able to schedule their workout plans for a week (7 days).
+This page showcases my contributions to the development of WerkIt!, an application that I have co-developed with
+my peers as part of a team project (tP) in the CS2113T Software Engineering & Object-Oriented Programming module
+offered by the School of Computing, National University of Singapore.
+
+### About the Project
+WerkIt! is a command line interface (CLI) application written in Java that allows users to create a weekly workout
+schedule for them to refer to and follow. More details about the project can be found in the following locations:
+* [GitHub Repository](https://github.com/AY2122S2-CS2113T-T09-2/tp)
+* [WerkIt! User Guide](../UserGuide.md)
+* [WerkIt! Developer Guide](../DeveloperGuide.md)
 
 ### Summary of Contributions
 
-* New Feature: Added the ability to search for either exercises, workouts, plans, or everything at one go.
-    * What it does: Allows the users to search specifically for exercises/workouts/plans/everything. Users are allowed 
+* **New Feature**: Added the ability to search for either exercises, workouts, plans, or everything at one go.
+    * **What it does**: Allows the users to search specifically for exercises/workouts/plans/everything. Users are allowed 
 to specify the type before they search.
-    * Justification: This feature improves the usability of WerkIt significantly. When the users store increasing amount
+    * **Justification**: This feature improves the usability of WerkIt! significantly. When the users store increasing amount
 of exercises/workouts/plans into WerkIt, it might be hard for them to find their desired data, by using the search
 feature, they can easily search for any type of data they want with a keyword.
-    * Highlights: This enhancement requires a high level of understand of the product as well as a deep understanding
+    * **Highlights**: This enhancement requires a high level of understand of the product as well as a deep understanding
 in data structure, since different data structures are used in different type of data. For example, exercises
 data are stored in array while workouts data make use of both array and hashmap. In order to obtain the required 
 matching results from any type of data, proficiency in data structure is indispensable.
 
-* New Feature: Added the ability to store plan data into local resource file as well as load the file when launching app 
+* **New Feature**: Added the ability to store plan data into local resource file as well as load the file when launching app 
 .
-  * What it does: Allows the users to store their plan data locally such that they can view their plan data without
-opening WerkIt.
-  * Justification: This feature improves the product and user experience significantly as all the data are backed up
+  * **What it does**: Allows the users to store their plan data locally such that they can view their plan data without
+opening WerkIt!.
+  * **Justification**: This feature improves the product and user experience significantly as all the data are backed up
 locally. Since every plan is written into resource file immediately after the creation of plan, all the data are secured
-in the event that WerkIt exit unexpectedly. Furthermore, if the users just want to take a look at what plans they have,
-they can do that by directly opening the local file instead of launching WerkIt.
-  * Highlights: This enhancement affects feature to be implemented in the future as any modification related to plan 
+in the event that WerkIt! exit unexpectedly. Furthermore, if the users just want to take a look at what plans they have,
+they can do that by directly opening the local file instead of launching WerkIt!.
+  * **Highlights**: This enhancement affects feature to be implemented in the future as any modification related to plan 
 will be reflected in the local plan file. It required a rigorous analysis of product design and strong understand of
 logic as it has the ability to store users' customized number of workouts in the plans, the number of workouts in each
 plan is not fixed. That is, this enhancement can detect the number of workouts in each plan, then handle and store them
 accordingly. Furthermore, in the case of local file corruption, e.g. users manually edit local file, this enhancement is
 also able to catch the error and take actions against the corrupted plans data only, without affecting other uncorrupted
 plans in the same file.
-* New Feature: Added the ability to view help.
-  * What it does: Allows the users to view all the features with examples.
-  * Justification: This feature allows the users to have a complete guide on how to use each commands with examples.
-* New Feature: Added the ability to populate exercise data from our data file to the product.
-  * What it does: Prepopulate a list of exercises for the users to construct workouts, plans and schedule.
-  * Justification: This feature is the core foundation of WerkIt as the creation of workouts/plans/schedule is
+* **New Feature**: Added the ability to view help.
+  * **What it does**: Allows the users to view all the features with examples.
+  * **Justification**: This feature allows the users to have a complete guide on how to use each commands with examples.
+* **New Feature**: Added the ability to populate exercise data from our data file to the product.
+  * **What it does**: Prepopulate a list of exercises for the users to construct workouts, plans and schedule.
+  * **Justification**: This feature is the core foundation of WerkIt as the creation of workouts/plans/schedule is
 impossible without the preloaded exercises.
-* New Feature: Added the feature for users to view the exercises available for selection.
-  * What it does: Allows the users to view all the exercises.
-  * Justification: Users need to know what exercises can be used to construct their workouts/plans/schedule.
-* Other code contributions:
-  * Contributed around 40% of `UI`, 20% of `FileManager`, 30% of `Parser` and 20% of `WerkIt`.
+* **New Feature**: Added the feature for users to view the exercises available for selection.
+  * **What it does**: Allows the users to view all the exercises.
+  * **Justification**: Users need to know what exercises can be used to construct their workouts/plans/schedule.
+* **Other code contributions**:
+  * Contributed around 40% of `UI`, 20% of `FileManager`, 35% of `Parser` and 20% of `WerkIt`.
     <br>
-* Test Cases:
+* **Test Cases**:
   * Junit test cases for the whole `SearchCommand` class.
-  * Some Junit test cases for the `FileManager`, `ExerciseList` and `Parser`.
+  * Junit test cases for the whole `ExerciseList` class.
+  * Junit test cases for the whole `ExerciseCommand` class.
+  * Some Junit test cases for the `FileManager` and `Parser`.
 
 
-* Code Contributed:
-    * Out of around 5100 lines of functional code of the whole project, 1334 lines of functional code were contributed by
+* **Code Contributed**:
+    ![tpDashboard](../images/ppp/a1021492980/tpDashBoard.png)
+    * Out of around 5,500 lines of functional code of the whole project, 1,612 lines of functional code were contributed by
   me
   [RepoSense link](https://nus-cs2113-ay2122s2.github.io/tp-dashboard/?search=a1021492980&breakdown=true&sort=groupTitle&sortWithin=title&since=2022-02-18&timeframe=commit&mergegroup=&groupSelect=groupByRepos&checkedFileTypes=docs~functional-code~test-code~other).
 
 
-* Contributions to the UG:
+* **Contributions to the UG**:
   * Added documentation for the features `search /exercise`, `search /workout`, `search /plan` and `search /all`.
   * Added documentation for the feature `exercise /list`.
   * Added documentation for the feature `help`.
 
 
-* Contributions to the DG:
+* **Contributions to the DG**:
   * Added documentation for the features `search /exercise`, `search /workout`, `search /plan` and `search /all`.
   * Added documentation for the feature `exercise /list`.
   * Added sequence diagrams for `exercise /list`, `search /exercise`, `search /workout`, `search /plan` and `search /all`.
   * Added class diagram for `SearchCommand` and `ExerciseCommand`.
   * Added design consideration for inconsistent data between resource files under  `File Management`.
   * Added `Exercise-related feautures` and `Search-related features` under `design` section.
+  * Added manual testing cases for `Exercise-related feautures` and `Search-related features`.
 
 
-* Community:
-  * Maintaining the issue tracker:
+* **Community**:
+  * **Maintaining the issue tracker**:
     * Create issues to be done by me, when creating PRs, link them to the corresponding issues.
     
-  * Review contributions (Including but not limited to) : 
+  * **Review contributions (Including but not limited to)** : 
     * [Review 1: Suggesting teammate to consider more edge case exceptions](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/17#discussion_r820104333)
     * [Review 2: Suggesting teammate to follow coding standard](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/22#discussion_r822512048)
     * [Review 3: Suggesting teammate to make more use of constant](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/105#discussion_r831350578)
     * [Review 4: Suggesting teammate to ignore local resource files in repo](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/105#discussion_r831344059)
     * [Review 5: Affirming teammate's work](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/118#discussion_r833036351)
-  * General bugs fixing (Including but not limited to) :
+  * **General bugs fixing (Including but not limited to)** :
+    * Fix potential bugs due to editing of local `exercises.txt` resource file. [PR Link](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/267#issue-1194975547)
     * Fix bugs related to file loading. [PR Link](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/218#issue-1190273926)
-    * Fix bugs related to data cascading due to deletion of relevant workouts/plans. [PR Link](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/218#issue-1190273926)
+    * Maintaining `Search-related features`. [PR Link](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/305#issue-1198465673), [PR Link](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/248#issue-1193092952)
     * Routine bug fixes. [PR Link](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/216#issue-1190069253), [PR Link](https://github.com/AY2122S2-CS2113T-T09-2/tp/pull/73#issue-1170675218)
 
 
-* Contributions beyond the project team:
-  * Bugs reported in other team's products:
+* **Contributions beyond the project team**:
+  * **Bugs reported in other team's products**:
     * [Bug reported 1: Reported a bug that random contact data could be inserted into the software database](https://github.com/a1021492980/ped/issues/4#issue-1189515964)
     * [Bug reported 2: Reported a bug that freestyle email and faculty could be inserted](https://github.com/a1021492980/ped/issues/3#issue-1189500495)
     * [Bug reported 3: Reported a bug that no restrictions implemented for insertion of date and time](https://github.com/a1021492980/ped/issues/2#issue-1189492498)
