Edit PPP for haofeng

--- a/docs/team/a1021492980.md
+++ b/docs/team/a1021492980.md
@@ -65,7 +65,7 @@ impossible without the preloaded exercises.
 * **Code Contributed**:
     ![tpDashboard](../images/ppp/a1021492980/tpDashBoard.png)
     * Out of around 5,500 lines of functional code of the whole project, 1,612 lines of functional code were contributed by
-  me
+  me. More details can be found at 
   [RepoSense link](https://nus-cs2113-ay2122s2.github.io/tp-dashboard/?search=a1021492980&breakdown=true&sort=groupTitle&sortWithin=title&since=2022-02-18&timeframe=commit&mergegroup=&groupSelect=groupByRepos&checkedFileTypes=docs~functional-code~test-code~other).
 
 
