Fix some grammar mistake in haofeng's PPP

--- a/docs/team/a1021492980.md
+++ b/docs/team/a1021492980.md
@@ -20,11 +20,11 @@ schedule for them to refer to and follow. More details about the project can be 
     * **What it does**: Allows the users to search specifically for exercises/workouts/plans/everything. Users are allowed 
 to specify the type before they search.
     * **Justification**: This feature improves the usability of WerkIt! significantly. When the users store increasing amount
-of exercises/workouts/plans into WerkIt, it might be hard for them to find their desired data, by using the search
+of exercises/workouts/plans into WerkIt!, it might be hard for them to find their desired data, by using the search
 feature, they can easily search for any type of data they want with a keyword.
     * **Highlights**: This enhancement requires a high level of understand of the product as well as a deep understanding
-in data structure, since different data structures are used in different type of data. For example, exercises
-data are stored in array while workouts data make use of both array and hashmap. In order to obtain the required 
+in data structure as different data structures are used in different type of data. For example, exercises
+data are stored in array while workouts data make use of both array and hashmap. In order to retrieve the required 
 matching results from any type of data, proficiency in data structure is indispensable.
 
 * **New Feature**: Added the ability to store plan data into local resource file as well as load the file when launching app 
@@ -37,14 +37,14 @@ in the event that WerkIt! exit unexpectedly. Furthermore, if the users just want
 they can do that by directly opening the local file instead of launching WerkIt!.
   * **Highlights**: This enhancement affects feature to be implemented in the future as any modification related to plan 
 will be reflected in the local plan file. It required a rigorous analysis of product design and strong understand of
-logic as it has the ability to store users' customized number of workouts in the plans, the number of workouts in each
-plan is not fixed. That is, this enhancement can detect the number of workouts in each plan, then handle and store them
-accordingly. Furthermore, in the case of local file corruption, e.g. users manually edit local file, this enhancement is
-also able to catch the error and take actions against the corrupted plans data only, without affecting other uncorrupted
+logic as it has the ability to store users' customized number of workouts in the plans. That is, the number of workouts in each
+plan is not fixed, this enhancement can detect the number of workouts in each plan, then handle and store them
+accordingly. Furthermore, in the case of local file corruption, such as when users manually edited the local file, this enhancement is
+able to catch the error and take actions against the corrupted plans' data only, without affecting other uncorrupted
 plans in the same file.
 * **New Feature**: Added the ability to view help.
   * **What it does**: Allows the users to view all the features with examples.
-  * **Justification**: This feature allows the users to have a complete guide on how to use each commands with examples.
+  * **Justification**: This feature allows the users to have a complete guide on how to use each command with examples.
 * **New Feature**: Added the ability to populate exercise data from our data file to the product.
   * **What it does**: Prepopulate a list of exercises for the users to construct workouts, plans and schedule.
   * **Justification**: This feature is the core foundation of WerkIt as the creation of workouts/plans/schedule is
