Fix some grammar mistake in haofeng's PPP

--- a/docs/team/a1021492980.md
+++ b/docs/team/a1021492980.md
@@ -47,7 +47,7 @@ plans in the same file.
   * **Justification**: This feature allows the users to have a complete guide on how to use each command with examples.
 * **New Feature**: Added the ability to populate exercise data from our data file to the product.
   * **What it does**: Prepopulate a list of exercises for the users to construct workouts, plans and schedule.
-  * **Justification**: This feature is the core foundation of WerkIt as the creation of workouts/plans/schedule is
+  * **Justification**: This feature is the core foundation of WerkIt! as the creation of workouts/plans/schedule is
 impossible without the preloaded exercises.
 * **New Feature**: Added the feature for users to view the exercises available for selection.
   * **What it does**: Allows the users to view all the exercises.
