Change to full name for haofeng's PPP

--- a/docs/team/a1021492980.md
+++ b/docs/team/a1021492980.md
@@ -1,4 +1,4 @@
-# Haofeng - Project Portfolio Page
+# Project Portfolio Page of Huang Haofeng (GitHub: a1021492980)
 
 ## Project: WerkIt!
 ## Overview
