--- a/docs/team/tuan0369.md
+++ b/docs/team/tuan0369.md
@@ -13,14 +13,20 @@ Code contributed: RepoSense [link](https://nus-cs2113-ay2122s2.github.io/tp-dash
 * Add New Feature: 
   * Add base class Order (Let user keep track of the existing orders)
   * Add base method to remove good and order from warehouse
+  * Add error handling for different methods 
   
 * Update existing features:
-  * Update Warehouse Class
+  * Update Warehouse class
+  * Update Order class
 
 * Add test:
-  * Add test for warehouse class 
+  * Add test for warehouse class
+  
+* Contribute to team-based task:
+  * Merge pull requests 
+  * Update User Guide and Developer Guide
+  * Check work done by other team members
   
 * Documentation:
-  * User Guide:
-  * Developer guide:
-    * Add documentation for different classes and methods
+  * User Guide: Add documentation for different commands
+  * Developer guide: Add documentation for different classes and methods
