--- a/docs/team/tuan0369.md
+++ b/docs/team/tuan0369.md
@@ -30,3 +30,6 @@ Code contributed: RepoSense [link](https://nus-cs2113-ay2122s2.github.io/tp-dash
 * Documentation:
   * User Guide: Add documentation for different commands
   * Developer guide: Add documentation for different classes and methods
+
+* Community contribution:
+  * [Report bugs](https://github.com/tuan0369/ped/issues) during PE-D
